[package]
name = "tana"
version = "0.1.0"
authors = ["thom"]
edition = "2018"

[dependencies]
reqwest = { version = "0.10", features = ["json", "blocking"] }
tokio = { version = "0.2", features = ["full"] }
futures = "0.3.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libmath = "0.2.1"
flate2 = "1.0"
rust-s3 = "0.18.11"
jemallocator = "0.3.2"
clap = "2.0"

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"

